# connect4000

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
cli/: Cargo.toml
cli/src/: join.rs  local.rs  main.rs  start.rs
core/: Cargo.toml
core/benches/: bench.rs
core/src/: lib.rs  test.rs
scripts/: generate-tls.sh
server/: Cargo.toml  README.md
server/src/: lib.rs
web-ui/: package.json  tsconfig.json
web-ui/public/: index.html
web-ui/public/css/: connect4000.css
web-ui/src/: colors.ts  main.ts  numbers.ts
web-ui/src/app/: app.ts  camera.ts  coins.ts  const.ts  grid.ts  interaction.ts  mount.ts  mouse.ts  run.ts
web-ui/src/net/: deserialize.ts  serialize.ts  stream.ts  transport.ts
web-ui/src/render/: depth.ts  factory.ts  gpu.ts  init.ts  projection.ts  render.ts  types.ts
web-ui/src/render/shader/: fragment.wgsl  index.ts  vertex.wgsl
web-ui/src/utils/: mat4.ts  vec3.ts
web-ui/types/: gl-mat4.ts
